--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,3 +1,9 @@
+@import "roboto.css";
+
+body {
+  font-family: 'Roboto', sans-serif;
+}
+
 .container {
   padding-top: 2rem;
   max-width: 1000px;
@@ -8,6 +14,9 @@ h1 {
   text-align: center;
 }
 
+.code {
+  color: blue;
+}
 
 .logo {
   background-image: url("../assets/webpack-logo.png");
